# rom-collection-cleanup-tool

./: .flake8  .gitignore  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PREVIEW_FIX_SUMMARY.md  PULL_REQUEST_DESCRIPTION.md  README.md  README_API_CREDENTIALS.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  RELEASE_v2.0.md  SECURITY.md  TEST_README.md  TEST_SETUP_SUMMARY.md  batch_processor.py  build_exe.py  commit.ps1  config.py  conftest.py  console.txt  credential_manager.py  game_mappings.py  generate_token.py  get_igdb_token.py  pyproject.toml  release_to_github.py  requirements-build.txt  requirements-optional.txt  requirements.txt  restore_incorrectly_removed.py  rom_cleanup.py  rom_cleanup_gui.py  rom_cleanup_gui_backup.py  rom_cleanup_gui_clean.py  rom_constants.py  rom_utils.py  tatus --porcelain  test_alternative_api.py  test_api_debug.py  (+9 more)
.github/workflows/: ci.yml  python-app.yml
test_roms_comprehensive/Compressed/: Super Mario Bros Compressed (Europe).7z
test_roms_comprehensive/GBA/: Advance Wars (USA).gba
test_roms_comprehensive/Mixed_Formats/: Super Mario Bros. (USA).nes
test_roms_comprehensive/NES/: Dragon Quest (USA).nes  Dragon Warrior (USA).nes  Super Mario Bros Test (USA).nes  Super Mario Bros. (Europe).nes  Super Mario Bros. (USA).nes  Zelda II (USA).nes
test_roms_comprehensive/PSX/: Metal Gear Solid (USA).iso  Resident Evil (USA).iso  Resident Evil 2 (USA).iso  Resident Evil 3 (USA).iso
test_roms_comprehensive/SNES/: Chrono Trigger (USA).smc  Final Fantasy VI (USA).smc  Secret of Mana (Japan).smc  Super Mario World (USA).smc
tests/: __init__.py  test_config.py  test_credential_manager.py  test_rom_cleanup.py  test_rom_cleanup_integration.py  test_rom_utils.py  test_scan_roms.py  test_tgdb_rate_limit.py
